# zkevm-circuits

./: Cargo.toml
eth-types/: Cargo.toml
eth-types/src/: keccak.rs  lib.rs
gadgets/: Cargo.toml
gadgets/src/: lib.rs  util.rs
mock/src/: lib.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/examples/: super-circuit.rs
zkevm-circuits/src/: evm_circuit.rs  keccak_circuit.rs  lib.rs  pi_circuit.rs  table.rs  tx_circuit.rs  util.rs
zkevm-circuits/src/evm_circuit/: util.rs
zkevm-circuits/src/evm_circuit/execution/: call.rs
zkevm-circuits/src/evm_circuit/util/: constraint_builder.rs
zkevm-circuits/src/keccak_circuit/: dev.rs  table.rs  test.rs
zkevm-circuits/src/root_circuit/: aggregation.rs
zkevm-circuits/src/state_circuit/: lookups.rs
zkevm-circuits/src/tx_circuit/: sign_verify.rs
zkevm-circuits/src/util/: cell_manager.rs  cell_placement_strategy.rs  word.rs
